--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
           <img src="./img/bcs.png" width="40%" alt="">
           <h1><strong>Borg Creative Studios</strong></h1>
           <h2><strong>The future of media.</strong></h2>
+
           <a class="uk-button uk-button-text" href="#next1" uk-scroll>Next</a>
+
         </div>
 
     </div>
@@ -142,6 +144,7 @@
     <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('img/bcs-cover.jpg');">
 
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+          <p>Can't find what your'e looking? Maybe our <a class="uk-button uk-button-text" href="./welcome.html" >Interactive Guide</a> can help!</p>
           <table class="uk-table" >
       <tbody style="border: none;">
           <tr style="background-color: #3d566e; border: none; color: #fff;">
