--- a/interactive.html
+++ b/interactive.html
@@ -85,7 +85,7 @@
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
 
           <h1><strong>Interactive</strong></h1>
-          <p>Our interactive entertainment projects include digital quizzes and video games.</p>
+          <p>Our interactive entertainment projects include digital quizzes, video games, and website guides.</p>
           <a class="uk-button uk-button-text" href="#next2" uk-scroll>Next</a>
         </div>
 
@@ -96,9 +96,9 @@
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
 
           <h1><strong>Quizzes</strong></h1>
-          <p>We have developed an internet quiz system that is great for entertainment, education, and polls. </p>
+          <p>We have developed an internet quiz system that is great for customer service, entertainment, and education. </p>
           <p>Here is an example of our interactive system in action.</p>
-          <p><a href="https://courses.wavedm.net/worryIND.html" target="_blank"><button class="uk-button uk-button-secondary">View example</button></a></p>
+          <p><a href="./welcome.html" target="_blank"><button class="uk-button uk-button-secondary">View example</button></a></p>
 
 
         </div>
