--- a/welcome.html
+++ b/welcome.html
@@ -84,14 +84,14 @@
                   var x = document.getElementById("q1");
                   document.getElementById("q1").innerHTML = '<button class="uk-button uk-button-secondary" onclick="qsub4()">Web services</button><button class="uk-button uk-button-secondary" onclick="qsub1()">Media services</button>';
                   var x = document.getElementById("t1");
-                  document.getElementById("t1").innerHTML = "Okay, let's look out our business products.";
+                  document.getElementById("t1").innerHTML = "Okay, let's look at our business products.";
 
               }
                   function qa2() {
                   var x = document.getElementById("q1");
                   document.getElementById("q1").innerHTML = '<button class="uk-button uk-button-secondary" onclick="qsub2()">Entertainment</button><button class="uk-button uk-button-secondary" onclick="qsub3()">Productivity</button>';
                   var x = document.getElementById("t1");
-                  document.getElementById("t1").innerHTML = "Okay, let's look out our home products.";
+                  document.getElementById("t1").innerHTML = "Okay, let's look at our home products.";
 
               }
                 function qsub1() {
