updated menu to include interactive guide

--- a/welcome.html
+++ b/welcome.html
@@ -51,6 +51,8 @@
           <p><a href="./video.html" ><button class="uk-button uk-button-text">Video</button></a></p>
           <p><a href="./interactive.html" ><button class="uk-button uk-button-text">Interactive</button></a></p>
         </div>
+        <p><a href="./welcome.html" ><button class="uk-button uk-button-text">Interactive Guide</button></a></p>
+
         <p><a href="https://teespring.com/stores/borgcreative" target="_blank"><button class="uk-button uk-button-text">Shop</button></a></p>
         <p><a href="./privacy.html" ><button class="uk-button uk-button-text">Privacy</button></a></p>
         <p><a href="https://www.facebook.com/borgcreativestudios/" target="_blank"> <img src="./img/facebook.svg" width="40px" alt=""> </a><a href="https://www.instagram.com/borgcreativestudios/" target="_blank"> <img src="./img/instagram.svg" width="40px" alt=""> </a><a href="https://twitter.com/borgcreative" target="_blank"> <img src="./img/twitter.svg" width="40px" alt=""> </a></p>
