--- a/404.html
+++ b/404.html
@@ -61,7 +61,7 @@
 
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
           <h1><strong>Uh oh! We can't find that page!</strong></h1>
-
+          <p><a class="uk-button uk-button-secondary" href="./welcome.html" target="_blank">Advanced Menu</a></p>
         </div>
 
     </div>
