--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
             <tbody style="border: none;">
                 <tr style="background-color: #3d566e; border: none; color: #fff;">
-                    <td><a href="./lenses.html">Social Lenses (Coming soon)</a></td>
+                    <td><a href="https://teespring.com/bcs-icons" target="_blank">BCS Icons</a></td>
                     <td><a href="./animation.html" >Animation</a></td>
 
                 </tr>
