--- a/bcs-lock.html
+++ b/bcs-lock.html
@@ -93,8 +93,9 @@
 <div id="my-id" uk-modal>
     <div class="uk-modal-dialog uk-modal-body">
         <h2 class="uk-modal-title">Hi! Thanks for downloading!</h2>
-        <p>Please read the terms and conditions before use. By downloading Fruity, you automatically agree to the terms, conditions, and privacy policy.</p>
-        <a href="./lock/BCS-Lock-Terms.pdf" target="_blank"><button class="uk-button uk-button-secondary" name="button">Read the terms</button></a><a href="https://www.borgcreative.com/lock/BCS-Lock.dmg" download><button class="uk-button uk-button-secondary" name="button">Download</button></a>
+        <p>Please read the terms and conditions before use. By downloading BCS Lock, you automatically agree to the terms, conditions, and privacy policy.</p>
+        <!--<p>Please consider donating to the project to keep it going!</p>-->
+        <a href="./lock/BCS-Lock-Terms.pdf" target="_blank"><button class="uk-button uk-button-secondary" name="button">Read the terms</button></a> <button class="uk-button uk-button-default" disabled>Coming soon!</button><!--<a href="https://www.borgcreative.com/lock/BCS-Lock.dmg" download><button class="uk-button uk-button-secondary" name="button">Download</button>--></a>
         <button class="uk-modal-close" type="button"></button>
     </div>
 </div>
@@ -111,10 +112,7 @@
 
     <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h2><strong>Top features</strong></h2>
 <img src="./img/hard-drive.svg" alt="">
-<p>BCS Lock is built to run smoothly and efficiantly on MacOS 10.12 and newer.</p>
-
-<img src="./img/image.svg" alt="">
-<p>BCS Lock does not contain trackers or logs.</p>
+<p>BCS Lock is built to run smoothly and efficiantly on MacOS 10.12 or newer.</p>
 
 <img src="./img/privacy.svg" alt="">
 <p>BCS Lock does not contain trackers or logs.</p>
