--- a/chartm.html
+++ b/chartm.html
@@ -12,9 +12,10 @@
         ['Estimated views (OCT, 2020)',        919, 810, 67, 0, 0, 622, 114],
         ['Estimated views (NOV, 2020)',        619, 768, 122, 0, 29, 1026, 182],
         ['Estimated views (DEC, 2020)',        668, 622, 78, 0, 2, 663, 58],
+        ['Estimated views (JAN, 2021)',       1460, 872, 57, 0, 25, 861, 46],
 
 
-        ['Estimated views (JAN, 2021)',       829, 705, 39, 0, 24, 704, 38]
+        ['Estimated views (FEB, 2021)',       0, 0, 0, 0, 0, 0, 0]
 
       ]);
 
