--- a/chartt.html
+++ b/chartt.html
@@ -12,7 +12,8 @@
         ['Estimated views (OCT, 2020)',        2532],
         ['Estimated views (NOV, 2020)',        2746],
         ['Estimated views (DEC, 2020)',        2432],
-        ['Estimated views (JAN, 2021)',       2417]
+        ['Estimated views (JAN, 2021)',       3391],
+        ['Estimated views (FEB, 2021)',       0]
       ]);
 
       var options = {
