--- a/chartb.html
+++ b/chartb.html
@@ -10,18 +10,18 @@
 
       var data = google.visualization.arrayToDataTable([
         ['ID', 'Tybe B', 'Type A', 'Site',     'Total Views'],
-        ['1',    751,              13,      '1',  764],
-        ['2',    52,              0,      '2',         52],
-        ['3',    25,               1,      '3',         26],
-        ['4',    869,              5,      '4',    874],
-        ['5',    199,              1,         '5',         200],
-        ['6',    32,              12,         '6',         44],
-        ['Fruity',    0,              46,       '7',    46],
-        ['Social',    1460,              0,      '8',    1460]
+        ['1',    163,              0,      'CoffeeWithJake',  163],
+        ['2',    7,              0,      'GroundsTechTalk',         7],
+        ['3',    1,               0,      'TheRenderBlog',         1],
+        ['4',    163,              0,      'JacobBorgProgramming',    163],
+        ['5',    2,              0,         'FreedomPoint',         2],
+        ['6',    0,              0,         'BCSSearch',         0],
+        ['Fruity',    0,              0,       'Fruity',    0],
+        ['Social',    11,              0,      'Social',    11]
       ]);
 
       var options = {
-        title: 'View Type Comparison (JAN 2021)',
+        title: 'View Type Comparison (FEB 2021)',
         hAxis: {title: 'Type B'},
         vAxis: {title: 'Type A'},
         bubble: {textStyle: {fontSize: 11}}
