--- a/welcome.html
+++ b/welcome.html
@@ -110,7 +110,7 @@
                 }
                 function qsub2() {
                   var x = document.getElementById("q1");
-                  document.getElementById("q1").innerHTML = '<a href="https://gamejolt.com/games/grocerycatcher/523501" target="_blank"><button class="uk-button uk-button-secondary" >Grocery Catcher</button></a><a href="./animation.html"><button class="uk-button uk-button-secondary">Animation</button></a><a href="./interactive.html"><button class="uk-button uk-button-secondary">Interactive</button></a>';
+                  document.getElementById("q1").innerHTML = '<a href="https://gamejolt.com/games/grocerycatcher/523501" target="_blank"><button class="uk-button uk-button-secondary" >Grocery Catcher</button></a><a href="./animation.html"><button class="uk-button uk-button-secondary">Animation</button></a><a href="./interactive.html"><button class="uk-button uk-button-secondary">Interactive</button></a><a href="https://www.tiktok.com/@borgcreativestudios?lang=en"><button class="uk-button uk-button-secondary">@borgcreativestudios</button></a>';
                   var x = document.getElementById("t1");
                   document.getElementById("t1").innerHTML = "Are any of these what you're looking for?";
                   var x = document.getElementById("reset");
