added review buttons

--- a/fruity.html
+++ b/fruity.html
@@ -73,6 +73,7 @@
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
 
           <h1><strong>Fruity</strong></h1>
+          <p><a href="https://www.producthunt.com/posts/fruity-web-browser-beta?utm_source=badge-review&utm_medium=badge&utm_souce=badge-fruity-web-browser-beta#discussion-body" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/review.svg?post_id=275435&theme=dark" alt="Fruity Web Browser (BETA) - Fruity is a minimalist web browser for communal devices | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a></p>
 
           <a class="uk-button uk-button-text" href="#next1" uk-scroll>Next</a>
         </div>
