--- a/welcome.html
+++ b/welcome.html
@@ -128,7 +128,7 @@
                   var x = document.getElementById("q1");
                   document.getElementById("q1").innerHTML = '<a href="./page12.html"><button class="uk-button uk-button-secondary" >Web Marketing</button></a><a href="https://search.borgcreative.com" target="_blank"><button class="uk-button uk-button-secondary" >BCS Search</button></a><a href="https://airtable.com/shrXaOPQ4UHah6w9d" target="_blank"><button class="uk-button uk-button-secondary" >BCS Search Indexing</button></a>';
                   var x = document.getElementById("t1");
-                  document.getElementById("t1").innerHTML = "Are any of these what you're looking for?";
+                  document.getElementById("t1").innerHTML = "Okay, let's look at our web services.";
                   var x = document.getElementById("reset");
                   document.getElementById("reset").innerHTML = '<button class="uk-button uk-button-secondary" onclick="reset()">Restart</button>';
                 }
