--- a/bcs-lock.html
+++ b/bcs-lock.html
@@ -73,8 +73,12 @@
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
 
           <h1><strong>BCS Lock</strong></h1>
+          <h3><strong>Coming soon!</strong></h3>
+          <p style="padding:10%"></p>
+          <center><iframe src="https://borgcreative.substack.com/embed" width="90%" height="90%" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe></center>
 
-          <a class="uk-button uk-button-text" href="#next1" uk-scroll>Next</a>
+
+          <!--<a class="uk-button uk-button-text" href="#next1" uk-scroll>Next</a>-->
         </div>
 
     </div>
@@ -85,23 +89,25 @@
       <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h2><strong>What is BCS Lock?</strong></h2>
-<p>BCS Lock is a local password generated developed using Python3.</p>
+<p>BCS Lock is an offline, privacy-oriented password generater developed with Python3.</p>
 <!-- This is a button toggling the modal -->
 <p><button uk-toggle="target: #my-id" class="uk-button uk-button-secondary" type="button">Download</button></p>
 
 <!-- This is the modal -->
 <div id="my-id" uk-modal>
     <div class="uk-modal-dialog uk-modal-body">
-        <h2 class="uk-modal-title">Hi! Thanks for downloading!</h2>
-        <p>Please read the terms and conditions before use. By downloading BCS Lock, you automatically agree to the terms, conditions, and privacy policy.</p>
+        <h2 class="uk-modal-title">Hello!</h2>
+        <p>BCS Lock is not available quite yet, but you can sign up for email updates below!</p>
+        <!--<p>Please read the terms and conditions before use. By downloading BCS Lock, you automatically agree to the terms, conditions, and privacy policy.</p>-->
         <!--<p>Please consider donating to the project to keep it going!</p>-->
-        <a href="./lock/BCS-Lock-Terms.pdf" target="_blank"><button class="uk-button uk-button-secondary" name="button">Read the terms</button></a> <button class="uk-button uk-button-default" disabled>Coming soon!</button><!--<a href="https://www.borgcreative.com/lock/BCS-Lock.dmg" download><button class="uk-button uk-button-secondary" name="button">Download</button>--></a>
+        <!--<a href="./lock/BCS-Lock-Terms.pdf" target="_blank"><button class="uk-button uk-button-secondary" name="button">Read the terms</button></a> <a href="https://www.borgcreative.com/lock/BCS-Lock.dmg" download><button class="uk-button uk-button-secondary" name="button">Download</button></a>-->
+        <center><iframe src="https://borgcreative.substack.com/embed" width="90%" height="90%" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe></center>
         <button class="uk-modal-close" type="button"></button>
     </div>
 </div>
 
 
-        <a class="uk-button uk-button-text" href="#next2" uk-scroll>Learn more</a>
+        <!--<a class="uk-button uk-button-text" href="#next2" uk-scroll>Learn more</a>-->
 
         </div>
     </div>
@@ -110,9 +116,9 @@
 <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #3d566e;">
   <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
-    <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h2><strong>Top features</strong></h2>
+    <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h2><strong>Features</strong></h2>
 <img src="./img/hard-drive.svg" alt="">
-<p>BCS Lock is built to run smoothly and efficiantly on MacOS 10.12 or newer.</p>
+<p>BCS Lock is built to run smoothly and efficiantly on MacOS 10.12 and newer systems.</p>
 
 <img src="./img/privacy.svg" alt="">
 <p>BCS Lock does not contain trackers or logs.</p>
