--- a/links.html
+++ b/links.html
@@ -68,7 +68,8 @@
     <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" style="background-image: url('img/bcs-cover.jpg');">
 
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1>Links</h1>
-          <p><a class="uk-button uk-button-secondary" href="https://www.borgcreative.com/">Borg Creative Studios</a></p>
+          <p><a class="uk-button uk-button-secondary" href="https://www.borgcreative.com/">Home</a></p>
+          <p><a class="uk-button uk-button-secondary" href="borgcreative.substack.com/">News letter</a></p>
           <p><a class="uk-button uk-button-secondary" href="https://twitter.com/borgcreative">Twitter</a></p>
           <p><a class="uk-button uk-button-secondary" href="https://www.instagram.com/borgcreativestudios/">Instagram</a></p>
           <p><a class="uk-button uk-button-secondary" href="https://www.linkedin.com/company/borg-creative-studios-llc/">LinkedIn</a></p>
