--- a/links.html
+++ b/links.html
@@ -69,7 +69,7 @@
 
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1>Links</h1>
           <p><a class="uk-button uk-button-secondary" href="https://www.borgcreative.com/">Home</a></p>
-          <p><a class="uk-button uk-button-secondary" href="borgcreative.substack.com/">News letter</a></p>
+          <p><a class="uk-button uk-button-secondary" href="https://borgcreative.substack.com/">News letter</a></p>
           <p><a class="uk-button uk-button-secondary" href="https://twitter.com/borgcreative">Twitter</a></p>
           <p><a class="uk-button uk-button-secondary" href="https://www.instagram.com/borgcreativestudios/">Instagram</a></p>
           <p><a class="uk-button uk-button-secondary" href="https://www.linkedin.com/company/borg-creative-studios-llc/">LinkedIn</a></p>
