Added BCS Author

--- a/welcome.html
+++ b/welcome.html
@@ -118,7 +118,7 @@
                 }
                 function qsub3() {
                   var x = document.getElementById("q1");
-                  document.getElementById("q1").innerHTML = '<a href="./fruity.html"><button class="uk-button uk-button-secondary">Fruity Web Browser</button></a><a href="https://search.borgcreative.com" target="_blank"><button class="uk-button uk-button-secondary">BCS Search</button></a>';
+                  document.getElementById("q1").innerHTML = '<a href="./fruity.html"><button class="uk-button uk-button-secondary">Fruity Web Browser</button></a><a href="https://search.borgcreative.com" target="_blank"><button class="uk-button uk-button-secondary">BCS Search</button></a><a href="https://author.borgcreative.com" target="_blank"><button class="uk-button uk-button-secondary">BCS Author</button></a>';
                   var x = document.getElementById("t1");
                   document.getElementById("t1").innerHTML = "Are any of these what you're looking for?";
                   var x = document.getElementById("reset");
