--- a/index.html
+++ b/index.html
@@ -90,14 +90,15 @@
 
             <tbody style="border: none;">
                 <tr style="background-color: #3d566e; border: none; color: #fff;">
+                  <td><a href="https://author.borgcreative.com/" target="_blank">BCS Author <span class="uk-label">NEW</span></a></td>
                     <td><a href="./page12.html" style="color: #fff;">Marketing</a></td>
                     <td><a href="./fruity.html" style="color: #fff;">Fruity</a></td>
 
                 </tr>
                 <tr style="background-color: #3d566e; border: none; color: #fff;">
+                    <td><a href="https://teespring.com/bcs-icons" target="_blank">BCS Icons <span class="uk-label">NEW</span></a></td>
                     <td><a href="https://gamejolt.com/games/grocerycatcher/523501" target="_blank">Grocery Catcher</a></td>
                     <td><a href="https://search.borgcreative.com/" target="_blank" >Search (Beta)</a></td>
-
                 </tr>
 
             </tbody>
@@ -117,7 +118,7 @@
 
             <tbody style="border: none;">
                 <tr style="background-color: #3d566e; border: none; color: #fff;">
-                    <td><a href="https://teespring.com/bcs-icons" target="_blank">BCS Icons <span class="uk-label">NEW</span></a></td>
+                  <td><a href="https://gamejolt.com/games/grocerycatcher/523501" target="_blank">Grocery Catcher</a></td>
                     <td><a href="./animation.html" >Animation</a></td>
 
                 </tr>
