--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
             <tbody style="border: none;">
                 <tr style="background-color: #3d566e; border: none; color: #fff;">
-                  <td><a href="https://author.borgcreative.com/" target="_blank">BCS Author <span class="uk-label">NEW</span></a></td>
+                  <td><a href="https://author.borgcreative.com/" target="_blank">BCS Author <span class="uk-label">BETA</span></a></td>
                     <td><a href="./page12.html" style="color: #fff;">Marketing</a></td>
                     <td><a href="./fruity.html" style="color: #fff;">Fruity</a></td>
 
