updated dashboard to reflect the addition of site 7

--- a/chartb.html
+++ b/chartb.html
@@ -16,6 +16,7 @@
         ['4',    384,              3,      'JacobBorgProgramming',    387],
         ['5',    2,              0,         'FreedomPoint',         2],
         ['6',    0,              0,         'BCSSearch',         0],
+        ['7',    0,              0,         'BCSAuthor',         0],
         ['Fruity',    0,              0,       'Fruity',    0],
         ['Social',    11,              0,      'Social',    11]
       ]);
