--- a/chartm.html
+++ b/chartm.html
@@ -8,14 +8,14 @@
 
     function drawChart() {
       var data = google.visualization.arrayToDataTable([
-        ['Site', 'Social Accounts','JacobBorgProgramming','GroundsTechTalk 1','GroundsTechTalk 2', 'TheRenderBlog', 'CoffeeWithJake Sites','Fruity'],
-        ['Estimated views (OCT, 2020)',        919, 810, 67, 0, 0, 622, 114],
-        ['Estimated views (NOV, 2020)',        619, 768, 122, 0, 29, 1026, 182],
-        ['Estimated views (DEC, 2020)',        668, 622, 78, 0, 2, 663, 58],
-        ['Estimated views (JAN, 2021)',       1460, 872, 57, 0, 25, 861, 46],
+        ['Site', 'Social Accounts','JacobBorgProgramming','GroundsTechTalk 1','GroundsTechTalk 2', 'TheRenderBlog', 'CoffeeWithJake Sites','BCS Author','Fruity'],
+        ['Estimated views (OCT, 2020)',        919, 810, 67, 0, 0, 622,0, 114],
+        ['Estimated views (NOV, 2020)',        619, 768, 122, 0, 29, 1026,0, 182],
+        ['Estimated views (DEC, 2020)',        668, 622, 78, 0, 2, 663,0, 58],
+        ['Estimated views (JAN, 2021)',       1460, 872, 57, 0, 25, 861,0, 46],
 
 
-        ['Estimated views (FEB, 2021)',       11, 384, 16, 0, 5, 280, 0]
+        ['Estimated views (FEB, 2021)',       11, 384, 16, 0, 5, 280,0, 0]
 
       ]);
 
