--- a/bct/mk2-bar-4.html
+++ b/bct/mk2-bar-4.html
@@ -17,11 +17,11 @@
     <div class="gallery" style="width: 45%;" height="auto">
       <div class="uk-card uk-card-default" width="100%">
           <div class="uk-card-media-top">
-              <a href="https://www.borgcreative.com/page12.html" target="_blank" class="uk-link-muted"><img src="./youradhere.png" alt="BCS Marketing"></a>
+              <a href="https://www.borgcreative.com/page12.html" target="_blank" class="uk-link-muted"><img src="./img/bcs-mk.png" alt="Your ad here"></a>
           </div>
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>BCS Marketing</span></h5>
-            <p>Buy an ad today! Starting at $10!</p>
+            <p>Buy an ad today!</p>
             <a href="https://www.borgcreative.com/page12.html" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
 
           </div>
