--- a/chartb.html
+++ b/chartb.html
@@ -10,14 +10,15 @@
 
       var data = google.visualization.arrayToDataTable([
         ['ID', 'Tybe B', 'Type A', 'Site',     'Total Views'],
-        ['1',    280,              1,      'CoffeeWithJake',  281],
-        ['2',    16,              0,      'GroundsTechTalk',         16],
-        ['3',    4,               0,      'TheRenderBlog',         1],
-        ['4',    384,              3,      'JacobBorgProgramming',    387],
-        ['5',    2,              0,         'FreedomPoint',         2],
-        ['6',    0,              0,         'BCSSearch',         0],
-        ['7',    0,              0,         'BCSAuthor',         0],
-        ['Fruity',    0,              0,       'Fruity',    0],
+        ['1',    419,              3,      'CoffeeWithJake',  422],
+        ['2',    32,              1,      'GroundsTechTalk',         33],
+        ['3',    5,               0,      'TheRenderBlog',         5],
+        ['4',    663,              9,      'JacobBorgProgramming',    672],
+        ['5',    8,              0,         'FreedomPoint',         8],
+        ['6',    0,              7,         'BCSSearch',         7],
+        ['7',    0,              3,         'BCSAuthor',         3],
+        ['Marketing Pages',0,    8,         'BCSMarketingPages', 8],
+        ['Fruity',    0,              1,       'Fruity',    1],
         ['Social',    11,              0,      'Social',    11]
       ]);
 
