--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
 <meta property="twitter:url" content="https://www.borgcreative.com/index.html">
 
 
-    <meta charset="utf-8">
+<meta name="title" content="Borg Creative Studios">
+<meta name="description" content="Borg Creative Studios is the home to various entertainment and development projects and products.">
+<meta name="keywords" content="media, professional, small business, development, entertainment, video games, game developer, web technologies, privacy, privacy matters, privacy oriented">
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
+<meta name="revisit-after" content="30 days">
+
     <title>Home</title>
   </head>
 
