--- a/page12.html
+++ b/page12.html
@@ -86,26 +86,59 @@
       <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
-          <table class="uk-table uk-table-hover uk-table-divider" style="border: none;">
+          <center>
+            <img width="60%" src="./img/adviews.png" alt="Person standing with computer windows illustration | Sourced from undraw.co">
+            <h2> <strong>Where are ads distributed?</strong> </h2>
+            <p>We distribute your ads to a variety of websites ranging from blogs, news sites, software sites, to social media affiliates*.</p>
+            <p>*Social media ads are charged separately</p>
+          </center>
 
-            <tbody style="border: none;">
-
-                <thead >
-                  <tr style="background-color: #3d566e; border: none; color: #fff;">
-                    <td >Low-cost <img src="./img/dollar.svg" alt=""> </td>
-                    <td >Privacy-oriented <img src="./img/privacy.svg" alt=""> </td>
-                    <td >Targeted advertising <img src="./img/crosshair.svg" alt=""> </td>
-                </tr>
-              </thead>
-                <tr style="background-color: #3d566e; border: none; color: #fff;">
-                  <td >Our platform is cost effective. Prices are flat-rate, making it easy for you to budget.</td>
-                  <td >We don't record confidential data from ads. The small amount of data we do collect, is never sold. </td>
-                  <td >You can target specific topics with your ads. Your ads will be posted on the websites that best suit your topic.</td>
-                </tr>
-
-            </tbody>
-        </table>
         <a class="uk-button uk-button-text" href="#next2" uk-scroll>Next</a>
+
+        </div>
+    </div>
+
+  <a id = "next2"></a>
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #3d566e;">
+      <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
+
+
+  <        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
+            <center>
+              <img width="60%" src="./img/data.png" alt="Data with person illustration | Sourced from undraw.co">
+              <h2> <strong>How is advertising data managed?</strong> </h2>
+              <p>We keep all data secure and private. The analytics platform we use shares our beliefs about privacy. The data collected, webpage, country, and device category, is kept secure and private.</p>
+            </center>
+        <a class="uk-button uk-button-text" href="#next3" uk-scroll>Next</a>
+
+        </div>
+    </div>
+    <a id = "next3"></a>
+
+
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #849ea3;">
+      <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
+
+        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
+          <center>
+            <img width="60%" src="./img/check.png" alt="Person inspecting information illustration | Sourced from undraw.co">
+            <h2> <strong>How are ads moderated?</strong> </h2>
+            <p>All ads are inspected prior to launching in order to verify that they meet are content <a uk-toggle="target: #my-id">guidelines</a>.</p>
+
+            <!-- This is the modal -->
+            <div id="my-id" uk-modal>
+                <div class="uk-modal-dialog uk-modal-body">
+                    <h2 class="uk-modal-title">Content Guidelines</h2>
+                    <p>As a family-friendly organization, we prohibit any ads that are not rated for general audiences. This includes the ad's content, product, and link. We do not allow offensive ads, ads that misinform, ads for products or services that are not family-friendly, ads that promote illegal behavior, or ads promoting illegal product. Links to your website are NOT to be shortened links. This is to insure security, privacy, and quality.</p>
+                    <p>(We have a limited number of ad slots available. If we are at capacity, we will place your ad in the queue and it will be posted  once a slot becomes available.)</p>
+                    <p>Ad images must be JPGs or PNGs (Videos are NOT supported).</p>
+                    <p>Recommended image size: 1640px/624px</p>
+
+                </div>
+            </div>
+          </center>
+
+        <a class="uk-button uk-button-text" href="#next4" uk-scroll>Next</a>
 
         </div>
     </div>
@@ -113,9 +146,7 @@
 
 
 
-
-
-<a id = "next2"></a>
+<a id = "next4"></a>
 <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('img/deals-meta.jpg');">
 
     <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
