Repairs to layout

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <tr style="background-color: #3d566e; border: none; color: #fff;">
                     <td><a href="https://teespring.com/bcs-icons" target="_blank">BCS Icons <span class="uk-label">NEW</span></a></td>
                     <td><a href="https://gamejolt.com/games/grocerycatcher/523501" target="_blank">Grocery Catcher</a></td>
-                    <td><a href="https://search.borgcreative.com/" target="_blank" >Search (Beta)</a></td>
+                    <td><a href="https://search.borgcreative.com/" target="_blank" >Search <span class="uk-label">BETA</span></a></td>
                 </tr>
 
             </tbody>
