--- a/page12.html
+++ b/page12.html
@@ -86,8 +86,8 @@
       <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
-          <center>
-            <img width="60%" src="./img/adviews.png" alt="Person standing with computer windows illustration | Sourced from undraw.co">
+          <center width="95%">
+            <img width="65%" src="./img/adviews.png" alt="Person standing with computer windows illustration | Sourced from undraw.co">
             <h2> <strong>Where are ads distributed?</strong> </h2>
             <p>We distribute your ads to a variety of websites ranging from blogs, news sites, software sites, to social media affiliates*.</p>
             <p>*Social media ads are charged separately</p>
@@ -104,8 +104,8 @@
 
 
   <        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
-            <center>
-              <img width="60%" src="./img/data.png" alt="Data with person illustration | Sourced from undraw.co">
+            <center width="95%">
+              <img width="65%" src="./img/data.png" alt="Data with person illustration | Sourced from undraw.co">
               <h2> <strong>How is advertising data managed?</strong> </h2>
               <p>We keep all data secure and private. The analytics platform we use shares our beliefs about privacy. The data collected, webpage, country, and device category, is kept secure and private.</p>
             </center>
@@ -120,8 +120,8 @@
       <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
-          <center>
-            <img width="60%" src="./img/check.png" alt="Person inspecting information illustration | Sourced from undraw.co">
+          <center widith="95%">
+            <img width="65%" src="./img/check.png" alt="Person inspecting information illustration | Sourced from undraw.co">
             <h2> <strong>How are ads moderated?</strong> </h2>
             <p>All ads are inspected prior to launching in order to verify that they meet are content <a uk-toggle="target: #my-id">guidelines</a>.</p>
 
