--- a/page12.html
+++ b/page12.html
@@ -89,8 +89,8 @@
           <center width="95%">
             <img width="65%" src="./img/adviews.png" alt="Person standing with computer windows illustration | Sourced from undraw.co">
             <h2> <strong>Where are ads distributed?</strong> </h2>
-            <p>We distribute your ads to a variety of websites ranging from blogs, news sites, software sites, to social media affiliates*.</p>
-            <p>*Social media ads are charged separately</p>
+            <p>We distribute your ads to a variety of websites. Websites include blogs, news sites, software sites, and more.</p>
+            <!--<p>*Social media ads are posted by affiliates and are charged separately</p>-->
           </center>
 
         <a class="uk-button uk-button-text" href="#next2" uk-scroll>Next</a>
@@ -103,7 +103,7 @@
       <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
 
-  <        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
+          <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
             <center width="95%">
               <img width="65%" src="./img/data.png" alt="Data with person illustration | Sourced from undraw.co">
               <h2> <strong>How is advertising data managed?</strong> </h2>
