--- a/page12.html
+++ b/page12.html
@@ -123,7 +123,7 @@
           <center widith="95%">
             <img width="65%" src="./img/check.png" alt="Person inspecting information illustration | Sourced from undraw.co">
             <h2> <strong>How are ads moderated?</strong> </h2>
-            <p>All ads are inspected prior to launching in order to verify that they meet are content <a uk-toggle="target: #my-id">guidelines</a>.</p>
+            <p>All ads are inspected prior to launching in order to verify that they meet our content <a uk-toggle="target: #my-id">guidelines</a>.</p>
 
             <!-- This is the modal -->
             <div id="my-id" uk-modal>
