--- a/page12.html
+++ b/page12.html
@@ -26,10 +26,15 @@
 <meta property="twitter:title" content="Borg Creative Studios">
 <meta property="twitter:description" content="Borg Creative Studios | Marketing">
 <meta property="twitter:image" content="https://www.borgcreative.com/img/code.jpg">
+
 <meta property="twitter:url" content="https://www.borgcreative.com/page12.html">
+<meta name="description" content="BCS Marketing is a new, privacy-oriented marketing platform.">
+<meta name="keywords" content="marketing, privacy, privacy oriented, digital marketing, marketing platform">
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
+<meta name="revisit-after" content="30 days">
 
-
-    <meta charset="utf-8">
     <title>BCS Marketing</title>
   </head>
 
