started adding schema

--- a/index.html
+++ b/index.html
@@ -37,10 +37,28 @@
 <meta name="language" content="English">
 <meta name="revisit-after" content="30 days">
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Borg Creative Studios, LLC",
+  "url": "www.borgcreative.com",
+  "logo": "https://www.borgcreative.com/img/bcs.png",
+  "alternateName": "Borg Creative Studios",
+  "sameAs": [
+    "https://www.facebook.com/borgcreativestudios/",
+    "https://www.instagram.com/borgcreativestudios/",
+    "https://twitter.com/borgcreative"
+  ]
+}
+</script>
+
     <title>Home</title>
   </head>
 
 <header>
+
+
   <div class="uk-inline" style="position: fixed; top: 0px; left: 0px;">
       <a href="./index.html"><button class="uk-button uk-button-secondary" type="button">Home</button></a>
 
