--- a/page12.html
+++ b/page12.html
@@ -35,6 +35,17 @@
 <meta name="language" content="English">
 <meta name="revisit-after" content="30 days">
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Software App",
+  "name": "BCS Marketing",
+  "image": "https://www.borgcreative.com/img/bcs.png",
+  "description": "BCS Marketing is a new, privacy oriented marketing platform",
+  "brand": "Borg Creative Studios"
+}
+</script>
+
     <title>BCS Marketing</title>
   </head>
 
